Bug #45428: update advisory

--- a/doc/errata/staging/ucs-school-s4-branch-site.yaml
+++ b/doc/errata/staging/ucs-school-s4-branch-site.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-s4-branch-site
 fix: 5.0.0-2A~4.2.0.201709201602
 desc: |
- * UCR variables for the DNS mapping configuration are not anymore overwritten when an error during the LDAP connection happens in the listener module, e.g. during changing the server password.
+ * UCR variables for the DNS mapping configuration are no longer overwritten or reset if an error during the LDAP connection happens in the Univention Directory Listener module, e.g. while changing the server password (Bug #45428).
 bug: [45428]
