--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -3,7 +3,8 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-import
-fix: 0.0.0-6A~4.2.0.201708101224
+fix: 0.0.0-9A~4.2.0.201710111357
 desc: |
  * A beta version of a new UCS@school import module has been implemented (Bug #45023).
-bug: [45023]
+ * The import UMC module supports login via SAML (Bug #45045).
+bug: [45023, 45045]
