Bug #45546: update advisories

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -5,10 +5,10 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-exam
 fix: 7.0.4-17A~4.2.0.201710091026
 desc: |
- * The script <command>exam-and-room-cleanup</command> will now also remove computers accounts from the exam group (Bug #43978).
- * In some &ucsUAS; environments students are member of a large number of groups. By default, if these students take part of
-   an exam, the exam mode copies all group memberships from the students to the corresponding exam users. For performance and
-   security reasons, it's now possible to blacklist groups from being taken over to exam users by defining a regular expression
+ * The cleanup script <command>exam-and-room-cleanup</command> will now also remove computers accounts from the exam group (Bug #43978).
+ * In some &ucsUAS; environments students are member of a large number of groups. If these students take part of
+   an exam, the exam mode copies all group memberships from the students to the corresponding exam users, by default. For performance and
+   security reasons, it is now possible to blacklist groups from being taken over to exam users by defining a regular expression
    for group DNs (UCR variable <env>ucsschool/exam/group/ldap/blacklist/regex</env>) (Bug #45473).
  * The timeout for starting new exams has been raised from 5 minutes to 30 minutes (Bug #45980).
 bug: [43978,43980,45473]
