--- a/doc/errata/staging/ucs-school-info.yaml
+++ b/doc/errata/staging/ucs-school-info.yaml
@@ -5,6 +5,5 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-info
 fix: 7.0.1-1A~4.2.0.201709081319
 desc: |
- * The CLI tool "ucs-school-info" does not crash anymore when displaying
-   network information.
+ * The CLI tool <command>ucs-school-info</command> does not crash anymore when displaying network information (Bug #45229).
 bug: [45229]
