--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -5,9 +5,9 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
 fix: 10.0.2-8A~4.2.0.201710111119
 desc: |
- * Support was added for changing the base path when searching for hooks (Bug #45024).
  * In some cases after stopping the exam mode, shares on the school server weren't accessible anymore. This bug has been fixed (Bug #43089).
- * LADP object classes for User objects are made available for permission checks during imports (Bug #45044).
- * When creating a school the DHCP server objects for the administrative DC Slave are now also created or moved into the DHCP service of the school in a multiserver environment (Bug #42687).
- * An error in an LDAP filter was fixed (Bug #45504).
+ * When creating a new school, the DHCP server objects for the administrative DC Slave are now also created or moved into the DHCP service of the school in a multiserver environment (Bug #42687).
+ * A incomplete LDAP filter was fixed. Due to relaxed filter parsing, this resulted in no observable error (Bug #45504).
+ * An internal improvement of the &ucsUAS; library: support was added for changing the base path when searching for hooks (Bug #45024).
+ * An internal improvement of the &ucsUAS; library: LDAP object classes for user objects are made available for permission checks during imports (Bug #45044).
 bug: [43089, 45024, 45044, 42687, 45504]
