--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -8,9 +8,10 @@ desc: |
  * The generation of netlogon scripts for Windows users has been separated into a new daemon that
    is triggered via the Univention Directory Listener. This way, the LDAP replication should not
    be slowed down any longer by lots of LDAP changes relevant for netlogon script generation (Bug #42997).
- * The shortcuts to the users shares showed the wrong icons in Windows 10. This has been fixed. It is suggested,
+ * The shortcuts to the users shares showed the wrong icons in Windows 10. This has been fixed. It is recommended,
    that the netlogon scripts are being recreated on each school server by calling the command
    <command>univention-directory-listener-ctrl resync ucs-school-user-logonscript</command> as user root.
-   Otherwise the existing netlogon scripts still show the wrong icons. To deactivate the adjustment of the icon
-   index of the file imageres.dll, set the UCRV ucsschool/userlogon/fix-win10-icon-offset to "false" (Bug #45301).
+   Otherwise the existing netlogon scripts still show the wrong icons under Windows 10. To deactivate the
+   adjustment of the icon index of the file <filename>imageres.dll</filename>, set the UCR variable
+   <envar>ucsschool/userlogon/fix-win10-icon-offset</envar> to <literal>false</literal> (Bug #45301).
 bug: [42997, 45301]
