--- a/doc/errata/staging/ucs-school-umc-printermoderation.yaml
+++ b/doc/errata/staging/ucs-school-umc-printermoderation.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-printermoderation
 fix: 14.0.3-5A~4.2.0.201709181136
 desc: |
- * The  print jobs of the logged in teacher are now also shown in the printermoderation UMC module.
+ * The print jobs of the currently logged-in teacher are now also displayed in the printermoderation UMC module (Bug #43704).
 bug: [43704]
