--- a/doc/errata/staging/ucs-school-umc-rooms.yaml
+++ b/doc/errata/staging/ucs-school-umc-rooms.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-rooms
-fix: 
+fix: 14.0.0-4A~4.2.0.201710121735
 desc: |
- * A standby animation is now shown during creating or modifying school rooms (Bug #45512).
+ * A standby animation is now shown while the UMC module is creating or modifying school rooms (Bug #45512).
 bug: [45512]
