--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,5 +5,8 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
 fix: 15.0.2-6A~4.2.0.201710181619
 desc: |
- * A regression introduced with UCS@school 4.2v4 has been fixed: if the CSV file passed to <command>import_user</command> contained no mail adresses for users, a traceback was displayed (Bug #45550).
-bug: [45550]
+ * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
+ * The configured user role is taken into account when searching for users (Bug #45044).
+ * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (Bug #45342).
+ * The class generation of the test user creation script was fixed (Bug #45436).
+bug: [45019, 45024, 45044, 45342, 45436]
