--- a/ucs-school-selfservice-support/debian/control
+++ b/ucs-school-selfservice-support/debian/control
@@ -14,7 +14,8 @@ Depends: univention-join,
  ${misc:Depends}
 Description: Package for running the self-service app in a UCS@school domain
  This package provides scripts for running the self-service app in a
- UCS@school domain.
+ UCS@school domain. It should be installed on the DC master and DC backups
+ only.
  .
  This package is part of Univention Corporate Server (UCS),
  an integrated, directory driven solution for managing
