--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
-fix: 
+fix: 10.0.2-9A~4.2.0.201710201146
 desc: |
  * An internal improvement of the &ucsUAS; library: support was added for changing the base path when searching for hooks (Bug #45024).
  * An internal improvement of the &ucsUAS; library: LDAP object classes for user objects are made available for permission checks during imports (Bug #45044).
