--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -9,4 +9,5 @@ desc: |
  * The configured user role is taken into account when searching for users (Bug #45044).
  * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (Bug #45342).
  * The class generation of the test user creation script was fixed (Bug #45436).
-bug: [45019, 45024, 45044, 45342, 45436]
+ * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (Bug #34727).
+bug: [45019, 45024, 45044, 45342, 45436, 34727]
