--- a/doc/errata/staging/ucs-school-umc-distribution.yaml
+++ b/doc/errata/staging/ucs-school-umc-distribution.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-distribution
-fix: 
+fix: 14.0.2-4.89.201711031537
 desc: |
  * When collecting distributed materials, the teachers own files are not collected anymore (Bug #45645).
 bug: [45645]
