--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -6,4 +6,5 @@ src: ucs-school-umc-import
 fix: 
 desc: |
  * Integrated UCR (Bug #45664).
-bug: [45664]
+ * Don't show download buttons for jobs where no download is possible (Bug #45659).
+bug: [45664, 45659]
