--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -9,4 +9,5 @@ desc: |
  * Don't show download buttons for jobs where no download is possible (Bug #45659).
  * Don't rename the original filename (Bug #45662).
  * After starting an import it is shown in the grid (Bug #45660).
-bug: [45664, 45659, 45662, 45660]
+ * Show roles depending on permissions (Bug #45717).
+bug: [45664, 45659, 45662, 45660, 45717]
