--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -11,4 +11,5 @@ desc: |
  * The class generation of the test user creation script was fixed (Bug #45436).
  * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (Bug #34727).
  * Add a method in the HTTP-API which returns the permitted roles for school where a user can start an import (Bug #45717).
-bug: [45019, 45024, 45044, 45342, 45436, 34727, 45717]
+ * Various security concerns of the HTTP-API have been improved.
+bug: [45019, 45024, 45044, 45342, 45436, 34727, 45717, 45713]
