--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [2]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.3-3A~4.2.0.201711101342
+fix: 15.0.3-5A~4.2.0.201711151504
 desc: |
  * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
  * The configured user role is taken into account when searching for users (Bug #45044).
@@ -11,5 +11,5 @@ desc: |
  * The class generation of the test user creation script was fixed (Bug #45436).
  * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (Bug #34727).
  * Add a method in the HTTP-API which returns the permitted roles for school where a user can start an import (Bug #45717).
- * Various security concerns of the HTTP-API have been improved.
+ * Various security concerns of the HTTP-API have been eliminated (Bug #45713).
 bug: [45019, 45024, 45044, 45342, 45436, 34727, 45717, 45713]
