--- a/doc/errata/staging/ucs-school-umc-distribution.yaml
+++ b/doc/errata/staging/ucs-school-umc-distribution.yaml
@@ -3,7 +3,7 @@ release: "4.1"
 version: [3]
 scope: ucs_4.1-0-ucs-school-4.1r2
 src: ucs-school-umc-distribution
-fix: 14.0.2-5.90.201711081229
+fix:
 desc: |
- * When collecting distributed materials, the teachers own files are not collected anymore (Bug #45645).
+ * When collecting distributed materials, files are now stored into a directory <literal>Unterrichtsmaterial-Ergebnisse</literal>. The prefix for the name of that directory can be modified with the UCR variable <envar>ucsschool/datadistribution/datadir/sender/project/suffix</envar> (Bug #45645).
 bug: [45645]
