--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -8,7 +8,7 @@ desc: |
  * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
  * The configured user role is taken into account when searching for users (Bug #45044).
  * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (Bug #45342).
- * The class generation of the test user creation script was fixed (Bug #45436).
+ * The script <command>ucs-school-testuser-import</command> mistakenly added new students to single letter classes that were disjoint with the classes of other testusers. This problem has been fixed (Bug #45436).
  * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (Bug #34727).
  * Add a method in the HTTP-API which returns the permitted roles for school where a user can start an import (Bug #45717).
  * Various security concerns of the HTTP-API have been eliminated (Bug #45713).
