--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -5,14 +5,14 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
 fix: 15.0.3-17A~4.2.0.201712111138
 desc: |
- * An experimental RESTful API for starting import jobs can now be installed (Bug #45019 #45024).
- * The configured user role is taken into account when searching for users (Bug #45044).
- * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (Bug #45342).
- * The script <command>ucs-school-testuser-import</command> mistakenly added new students to single letter classes that were disjoint with the classes of other testusers. This problem has been fixed (Bug #45436).
- * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (Bug #34727).
- * Add a method in the HTTP-API which returns the permitted roles for school where a user can start an import (Bug #45717).
- * Various security concerns of the HTTP-API have been eliminated (Bug #45713).
- * The maximum length of a username for teachers and staff is now 20. Students username may not be longer than 15 characters to support the use of the exam mode and ensure a working windows login (Bug #45577).
- * The new UCR variable ucsschool/import/generate/user/attributes/no-overwrite is a whitespace separated list of LDAP attributes that the user import will not overwrite when their values are non-empty. This fixes a bug which made generated email adresses change on every import (Bug #45679).
- * Non-ASCII characters in sourceUID and recordUID are now handled correctly (Bug #45626).
-bug: [45019, 45024, 45044, 45342, 45436, 34727, 45717, 45713, 45577, 45679, 45626]
+ * An experimental Web API for starting import jobs can now be installed (<u:bug>45844</u:bug> <u:bug>45024</u:bug>).
+ * The configured user role is taken into account when searching for users (<u:bug>45044</u:bug>).
+ * Configuration and code for reading and writing CSV data compatible with the HTTP-API was added (<u:bug>45342</u:bug>).
+ * The script <command>ucs-school-testuser-import</command> mistakenly added new students to single letter classes that were disjoint with the classes of other testusers. This problem has been fixed (<u:bug>45436</u:bug>).
+ * The import scripts for creating computers, networks, printers or groups do not create schools anymore. Previously if the CSV data contained a school which did not exists a broken OU structure was created (<u:bug>34727</u:bug>).
+ * Add a method in the HTTP-API which returns the permitted roles for school where a user can start an import (<u:bug>45717</u:bug>).
+ * Various security concerns of the HTTP-API have been eliminated (<u:bug>45713</u:bug>).
+ * The maximum length of a username for teachers and staff is now 20. Students username may not be longer than 15 characters to support the use of the exam mode and ensure a working windows login (<u:bug>45577</u:bug>).
+ * The new UCR variable ucsschool/import/generate/user/attributes/no-overwrite is a whitespace separated list of LDAP attributes that the user import will not overwrite when their values are non-empty. This fixes a <u:bug>which made generated email adresses change on every import (<u:bug>45679</u:bug>).
+ * Non-ASCII characters in sourceUID and recordUID are now handled correctly (<u:bug>45626</u:bug>).
+bug: [45844, 45024, 45044, 45342, 45436, 34727, 45717, 45713, 45577, 45679, 45626]
