--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-umc-users
 fix: 13.0.0-6A~4.2.0.201711291510
 desc: |
- * The value for the checkbox to force a password change on the next login may now be defined via UCR (Bug #42004).
+ * The default state of the checkbox to force a password change on the next login may now be defined via UCR (Bug #42004).
 bug: [42004]
