--- a/ucs-school-metapackage/debian/control
+++ b/ucs-school-metapackage/debian/control
@@ -49,10 +49,10 @@ Architecture: all
 Depends: univention-ldap-server (>= 8.0.77-4),
  univention-ldap-acl-slave (>= 8.0.77-4),
  univention-directory-manager-tools (>= 7.0.234-1),
- univention-samba4 (>= 1.0.138-11) | univention-samba (>= 6.0.27-1),
- univention-s4-connector (>= 6.0.128-24) | univention-samba-slave-pdc,
- libunivention-ldb-modules | univention-samba (>= 6.0.27-1),
- ucs-school-s4-branch-site | univention-samba,
+ univention-samba4 (>= 1.0.138-11),
+ univention-s4-connector (>= 6.0.128-24),
+ libunivention-ldb-modules,
+ ucs-school-s4-branch-site,
  ucs-school-netlogon-user-logonscripts,
  ucs-school-old-homedirs,
  ucs-school-old-sharedirs,
@@ -107,8 +107,8 @@ Depends: univention-ldap-server (>= 8.0.77-4),
  ucs-school-old-sharedirs,
  ucs-school-info,
  ucs-school-umc-installer,
- libunivention-ldb-modules | univention-samba,
- univention-s4-connector (>= 6.0.128-24) | univention-samba,
+ libunivention-ldb-modules,
+ univention-s4-connector (>= 6.0.128-24),
  univention-management-console (>= 4.0.231-1),
  univention-management-console-frontend (>= 1.0.320-1),
  univention-management-console-web-server (>= 1.0.320-1),
@@ -151,10 +151,10 @@ Architecture: all
 Depends: univention-config,
  shell-ucs-school (>= 5.0.38),
  python-ucs-school (>= 5.0.3-17),
- univention-samba4 (>= 1.0.138-11) | univention-samba (>= 6.0.27-1),
- univention-s4-connector (>= 6.0.128-24) | univention-samba-slave-pdc,
- libunivention-ldb-modules | univention-samba (>= 6.0.27-1),
- ucs-school-s4-branch-site | univention-samba
+ univention-samba4 (>= 1.0.138-11),
+ univention-s4-connector (>= 6.0.128-24),
+ libunivention-ldb-modules,
+ ucs-school-s4-branch-site
 Description: UCS@school meta package for non-educational Slave servers
  .
  This package is part of Univention Corporate Server (UCS),
