--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-lib
-fix: 
+fix: 10.0.2-10A~4.2.0.201802141459
 desc: |
  * Automatically generated passwords are now better readable (Bug #45640).
 bug: [45640]
