Bug #46290: give runsv time to recognize process state

--- a/ucs-school-webproxy/debian/control
+++ b/ucs-school-webproxy/debian/control
@@ -11,7 +11,8 @@ Pre-Depends: univention-config
 Depends: univention-squid (>= 5.0.8),
  squidguard (>= 1.5-1.23),
  python-ucs-school,
- ucs-school-umc-internetrules
+ ucs-school-umc-internetrules,
+ univention-runit
 Description: meta package for UCS@school webproxy
  This meta package installs and configures squid and squidguard
  as HTTP proxy with transparent NTLM authentication.
