--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -8,10 +8,10 @@ desc: |
  * The global user import configuration (<filename>/usr/share/ucs-school-import/configs/user_import_defaults.json</filename>) does not contain any scheme anymore. Its existence was preventing the creation of users without email address. If your configuration was using the default email or username scheme, then it must now be recreated in <filename>/var/lib/ucs-school-import/configs/user_import.json</filename>. If the input CSV does not supply an email address or username and no scheme is given, new users will not have an email address (or fail to be created without a username) (Bug #45972). The original configuration was:
     <programlisting>
     "scheme": {
-    		"email": "<firstname>[0].<lastname>@<maildomain>",
-    		"recordUID": "<email>",
+    		"email": "&lt;firstname&gt;[0].&lt;lastname&gt;@&lt;maildomain&gt;",
+    		"recordUID": "&lt;email&gt;",
     		"username": {
-    			"default": "<:umlauts><firstname>[0].<lastname><:lower>[COUNTER2]"
+    			"default": "&lt;:umlauts&gt;&lt;firstname&gt;[0].&lt;lastname&gt;&lt;:lower&gt;[COUNTER2]"
     		}
     	}
     </programlisting>
