--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.3-25A~4.2.0.201802191415
+fix: 
 desc: |
  * The global user import configuration (<filename>/usr/share/ucs-school-import/configs/user_import_defaults.json</filename>) does not contain any scheme anymore. Its existence was preventing the creation of users without email address. If your configuration was using the default email or username scheme, then it must now be recreated in <filename>/var/lib/ucs-school-import/configs/user_import.json</filename>. If the input CSV does not supply an email address or username and no scheme is given, new users will not have an email address (or fail to be created without a username) (Bug #45972). The original configuration was:
     <programlisting>
@@ -18,4 +18,5 @@ desc: |
  * The user import now allows to remove email addresses. To do so, a CSV column must be mapped to the email property and the fields entry must be empty. An email address will only be generated from a scheme, when no CSV column for email addresses exist (Bug #46317).
  * Syntax and consistency checks are now done after running the pre_create / pre_modify / pre_move hooks (Bug #46317).
  * Generated passwords of newly created users are now better readable (Bug #45640).
-bug: [45972, 46317, 45640]
+ * When available, the responsible line from the CSV file is now attached to an ImportUser object that is to be deleted (Bug #46384).
+bug: [45972, 46317, 45640, 46384]
