--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -18,5 +18,5 @@ desc: |
  * The user import now allows to remove email addresses. To do so, a CSV column must be mapped to the email property and the fields entry must be empty. An email address will only be generated from a scheme, when no CSV column for email addresses exist (Bug #46317).
  * Syntax and consistency checks are now done after running the pre_create / pre_modify / pre_move hooks (Bug #46317).
  * Generated passwords of newly created users are now better readable (Bug #45640).
- * When available, the responsible line from the CSV file is now attached to an ImportUser object that is to be deleted (Bug #46384).
+ * An internal improvement has been made to give python hooks more flexibility: if available, the responsible line of the CSV file is now attached to an ImportUser object that is about to be deleted (Bug #46384).
 bug: [45972, 46317, 45640, 46384]
