--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -1,9 +1,10 @@
 product: ucsschool
-release: "4.2"
-version: [1]
-scope: ucs_4.2-0-ucs-school-4.2
+release: "4.3"
+version: [0]
+scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 15.0.3-23A~4.2.0.201801121315
+fix: 16.0.1-4A~4.3.0.201802231338
 desc: |
  * The global user import configuration (<filename>user_import_defaults.json</filename>) does not contain any scheme anymore. Its existence was preventing the creation of users without email address (Bug #45972).
-bug: [45972]
+ * An internal improvement has been made to give python hooks more flexibility: if available, the responsible line of the CSV file is now attached to an ImportUser object that is about to be deleted (Bug #46384).
+bug: [45972, 46384]
