--- a/ucs-school-ldap-acls-master/debian/control
+++ b/ucs-school-ldap-acls-master/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.5.2
 
 Package: ucs-school-ldap-acls-master
 Architecture: all
-Depends: univention-ldap-server, univention-ldap-config
+Depends: univention-ldap-server, univention-ldap-config, ucs-school-import
 Conflicts: univention-server-slave, univention-server-member, univention-mobile-client, univention-managed-client, univention-basesystem
 Description: Special LDAP ACLs for UCS@school
  This package provides additional LDAP ACLs for slapd
