--- a/ucs-school-radius-802.1x/conffiles/etc/freeradius/3.0/radiusd.conf
+++ b/ucs-school-radius-802.1x/conffiles/etc/freeradius/3.0/radiusd.conf
@@ -231,7 +231,9 @@ cleanup_delay = 5
 #  Useful range of values: 256 to infinity
 #
 #max_requests = 16384
-max_requests = 1024
+@!@
+print 'max_requests = %s' % (configRegistry.get('freeradius/conf/max_requests', '1024'), )
+@!@
 
 #  hostname_lookups: Log the names of clients or just their IP addresses
 #  e.g., www.freeradius.org (on) or 206.47.27.232 (off).
