Bug #46533: depend on current postgres

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -61,7 +61,7 @@ Depends: ${misc:Depends},
  python-django-celery (>=3.1.16-1),
  python-django-filter (>=1.0.1-1),
  gunicorn (>=19.0-1),
- univention-postgresql-9.4,
+ univention-postgresql,
  python-psycopg2 (>=2.5.4),
  python-django-pam (>=1.2.0-1),
  python-pampy (>=1.8.2-1),
