--- a/doc/quickstart/Makefile
+++ b/doc/quickstart/Makefile
@@ -3,7 +3,7 @@ MAIN := quickstart-ucsschool-4.3-de
 STYLESHEET := univention_extdocs
 quickstart-de%: lang := de
 
-COMMON_DIR := ../../../doc-common/docbook
+COMMON_DIR ?= ../../../doc-common/docbook
 include $(COMMON_DIR)/Makefile
 
 OPTIONS += --stringparam front.cover "$(CURDIR)/page-background-title-page.jpg"
