Bug #46710: add advisories

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -2,8 +2,11 @@ product: ucsschool
 release: "4.2"
 version: [3]
 scope: ucs_4.2-0-ucs-school-4.2
-src: ucs-school-umc-exams
+src: ucs-school-umc-exam
 fix: 7.0.4-18A~4.2.0.201802211220
 desc: |
  * The exam-and-room-cleanup script now uses the FQDN for the UMC server connection to avoid certificate verification errors. It also safely handles missing directories (Bug #46360).
-bug: [46360]
+ * When uploading files with Internet Explorer, the files were not always correctly saved in the local
+   file system by the UMC module "Exam Mode" and were therefore not distributed to the users. This error
+   has now been corrected. (Bug #46710).
+bug: [46360,46710]
