Bug #46710,#46719: update advisories

--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [0]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-exam
-fix: 
+fix: 8.0.1-4A~4.3.0.201803221143
 desc: |
  * When uploading files with Internet Explorer, the files were not always correctly saved in the local
    file system by the UMC module "Exam Mode" and were therefore not distributed to the users. This error
@@ -11,7 +11,4 @@ desc: |
  * The new UCR variable <envar>ucsschool/exam/user/homedir/autoremove</envar> has been added to control
    whether the exam users' home directories are automatically deleted after the exam mode has ended.
    By default (<literal>yes</literal>), the directories are removed after collecting the exam results (Bug #46719).
- * The new UCR variable <envar>ucsschool/exam/user/homedir/autoremove</envar> has been added that specifies
-   if the home directories of exam users shall be purged if exams are finished. The old default
-   <literal>yes</literal> has been kept, so there is no change in behaviour (Bug #46719).
 bug: [46710,46719]
