--- a/doc/errata/staging/ucs-school-umc-users.yaml
+++ b/doc/errata/staging/ucs-school-umc-users.yaml
@@ -6,4 +6,4 @@ src: ucs-school-umc-users
 fix: 
 desc: |
  * The UDM flag <emphasis>pwdChangeNextLogin</emphasis> toggled each time when the user's password has been reset with activated checkbox that should have forced the user to change the password on next login (Bug #46012).
-bug: []
+bug: [46012]
