Bug #46806: update advisory

--- a/doc/errata/staging/ucs-school-radius-802.1x.yaml
+++ b/doc/errata/staging/ucs-school-radius-802.1x.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [0]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-radius-802.1x
-fix: 
+fix: 7.0.0-8A~4.3.0.201804111426
 desc: |
  * An internal comparison was case sensitive and prevented the authentication of the host against the UCS@school radius server (Bug #46806).
 bug: [46806]
