Bug #45802: add advisory entry

--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -3,7 +3,8 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-netlogon-user-logonscripts
-fix: 13.0.2-13A~4.2.0.201804041750
+fix: 
 desc: |
  * A database locking error is now avoided (Bug #46778).
-bug: [46778]
+ * The processing speed of the listener module <filename>ucs-school-user-logonscripts.py</filename> has been improved (Bug #45802).
+bug: [46778,45802]
